# claw_bot

./: .gitignore  AGENTS.md  OPTIMIZATION_TODO.md  README.md  config.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
src/: App.tsx  index.css  main.tsx  model_providers.json  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.temp_build/: config.toml  jwt_secret.txt  rsa_keypair.pem
src-tauri/.temp_build/db/: agent_isolation.db  agent_isolation.db-shm  agent_isolation.db-wal  claw.db-shm
src-tauri/.temp_build/skills/desktop-automation/: SKILL.md
src-tauri/.temp_build/skills/wechat/: SKILL.md
src-tauri/bundled-skills/desktop-automation/: SKILL.md
src-tauri/bundled-skills/dev-agent/: SKILL.md
src-tauri/bundled-skills/wechat/: SKILL.md
src-tauri/capabilities/: default.json
src-tauri/crates/: MIGRATION_PLAN.md
src-tauri/crates/claw-automatically/: Cargo.toml  README.md
src-tauri/crates/claw-automatically/src/: clipboard.rs  commands.rs  coordinate_validator.rs  error.rs  lib.rs  retry.rs  screenshot_diff.rs  tests.rs  types.rs
src-tauri/crates/claw-automatically/src/agent/: automation_skill.rs  cua_agent.rs  mod.rs
src-tauri/crates/claw-automatically/src/capture/: mod.rs  screen.rs
src-tauri/crates/claw-automatically/src/input/: keyboard.rs  mod.rs  mouse.rs
src-tauri/crates/claw-automatically/src/manop/: action_executor.rs  config.rs  inference_engine.rs  mod.rs  model_manager.rs
src-tauri/crates/claw-automatically/src/platform/: app_index.rs  app_launcher.rs  mod.rs  window.rs
src-tauri/crates/claw-channel/: Cargo.toml  README.md
src-tauri/crates/claw-channel/src/: bootstrap.rs  config.rs  encryption.rs  error.rs  inbound.rs  lib.rs  registry.rs  streaming.rs  traits.rs  types.rs
src-tauri/crates/claw-channel/src/plugins/: discord.rs  mod.rs  telegram.rs
src-tauri/crates/claw-channel/src/plugins/weixin/: context_token.rs  crypto.rs  ilink_api.rs  markdown.rs  mod.rs  weixin_adapter.rs
src-tauri/crates/claw-config/: Cargo.toml
src-tauri/crates/claw-config/src/: config.rs  lib.rs  path_resolver.rs  redact.rs  ts_types.rs
src-tauri/crates/claw-db/: Cargo.toml
src-tauri/crates/claw-db/src/: database.rs  lib.rs  mod.rs  vector_store.rs
src-tauri/crates/claw-db/src/db/: channel_migration.rs  conn.rs  mod.rs
src-tauri/crates/claw-db/src/db/agent_entities/: agent_configs.rs  agent_profiles.rs  agent_sessions.rs  agent_vectors.rs  agent_workspace_files.rs  agents.rs  mod.rs
src-tauri/crates/claw-db/src/db/backend/: mod.rs  postgres_backend.rs  qdrant_backend.rs  schema_validator.rs  sqlite_backend.rs
src-tauri/crates/claw-db/src/db/entities/: channel_accounts.rs  channel_message_log.rs  channel_sessions.rs  conversations.rs  entities.rs  entity_cooccurrences.rs  memory_links.rs  memory_units.rs  messages.rs  mod.rs  unit_entities.rs
src-tauri/crates/claw-harness/: Cargo.toml
src-tauri/crates/claw-harness/src/: lib.rs  mod.rs
src-tauri/crates/claw-harness/src/harness/: agents_md.rs  cron.rs  cross_memory.rs  error_learning.rs  hooks.rs  mod.rs  observability.rs  persona.rs  types.rs  validation.rs
src-tauri/crates/claw-llm/: Cargo.toml
src-tauri/crates/claw-llm/src/: api_client.rs  connection_health.rs  constants.rs  credential_pool.rs  encoding_recovery.rs  engine.rs  error_classifier.rs  lib.rs  llm.rs  llm_caller_impl.rs  loop_detector.rs  message_sanitizer.rs  mod.rs  prompt_builder.rs  streaming.rs  tool_deduplicator.rs  tool_executor.rs  tool_loop.rs
src-tauri/crates/claw-rag/: Cargo.toml
src-tauri/crates/claw-rag/src/: builtin_provider.rs  lib.rs  local_embedder.rs  memory_layers.rs  memory_pipeline.rs  memory_provider.rs  mod.rs  rag.rs
src-tauri/crates/claw-tools/: Cargo.toml
src-tauri/crates/claw-tools/src/: agent_manager.rs  agent_session.rs  browser_manager.rs  bundled_skills.rs  chrome_cdp.rs  extension_manager.rs  global_registry.rs  lib.rs  mcp_client.rs  registry.rs  session_priority_queue.rs  skill_loader.rs  skills.rs  tool_dispatcher.rs  tool_executor.rs  tool_registry.rs
src-tauri/crates/claw-tools/src/plugins/: mod.rs
src-tauri/crates/claw-tools/src/plugins/agent/: mod.rs
src-tauri/crates/claw-tools/src/plugins/file/: mod.rs
src-tauri/crates/claw-tools/src/plugins/git/: mod.rs
src-tauri/crates/claw-tools/src/plugins/misc/: mod.rs
src-tauri/crates/claw-tools/src/plugins/search/: mod.rs
src-tauri/crates/claw-tools/src/plugins/shell/: mod.rs
src-tauri/crates/claw-tools/src/plugins/web/: mod.rs
src-tauri/crates/claw-traits/: Cargo.toml
src-tauri/crates/claw-traits/src/: automation.rs  channel_ops.rs  event_bus.rs  lib.rs  llm_caller.rs  tool_executor.rs
src-tauri/crates/claw-types/: Cargo.toml
src-tauri/crates/claw-types/src/: common.rs  error.rs  events.rs  lib.rs
src-tauri/crates/claw-ws/: Cargo.toml  README.md
src-tauri/crates/claw-ws/src/: bootstrap.rs  commands.rs  lib.rs
src-tauri/crates/claw-ws/src/adapters/: mod.rs  tool_adapters.rs
src-tauri/crates/claw-ws/src/ws/: agent_engine.rs  app_state.rs  auth.rs  channel_handlers.rs  keygen.rs  middleware.rs  mod.rs  protocol.rs  response.rs  router.rs  router_registry.rs  router_trait.rs  server.rs
src-tauri/crates/claw-ws/src/ws/routes/: agent_routes.rs  auth_routes.rs  automation_routes.rs  browser_routes.rs  channel_routes.rs  cmd_routes.rs  config_routes.rs  conversation_routes.rs  cron_routes.rs  fs_skill_routes.rs  git_routes.rs  harness_routes.rs  hook_routes.rs  iso_routes.rs  memory_routes.rs  multi_agent_routes.rs  persona_routes.rs  skill_installer.rs  skill_routes.rs  system_agent_routes.rs  system_routes.rs  tool_routes.rs  weixin_routes.rs
src-tauri/icons/: icon.icns
src-tauri/keys/: .gitignore
src-tauri/models/: README.md
src-tauri/src/: app_state.rs  commands.rs  main.rs
src/api/: agents.ts  auth.ts  automation.ts  browser.ts  channels.ts  cmd.ts  config.ts  conversations.ts  cron.ts  database.ts  env.ts  git.ts  (+12 more)
(+71 files in other folders)
