[package]
name = "claw-traits"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
claw-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
